<resources>
    <string name="app_name">Friend Space</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">%s %s</string>
    <string name="logout">Logout</string>
    <string name="send_message">Send Message</string>
    <string name="send_button">Send button</string>
    <string name="create_new_message">Create new message</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="remove_current_photo">Remove Current Photo</string>
</resources>
