<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:paddingTop="32dp"
            android:autofillHints="@string/first_name"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:autofillHints="@string/last_name"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/password"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/register"
            android:background="@drawable/button_rounded"
            android:textColor="#fff"/>

    </LinearLayout>

</RelativeLayout>