<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:autofillHints="New password"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/password"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:background="@drawable/button_rounded"
            android:textColor="#fff"
            android:text="@string/change_password"/>

    </LinearLayout>
</LinearLayout>