<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/textColorDark"
        android:layout_below="@id/user_name"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/btn_change_password"
        android:text="@string/change_password"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@id/text_settings"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#D8D8D8"/>

</RelativeLayout>